--- a/styles/style.css
+++ b/styles/style.css
@@ -139,20 +139,18 @@
 
 .card {
     display: flex;
-    max-width: 800px;
+    max-width: 700px;
     background-color: #fff;
-    border-radius: 10px;
+    border-radius: 16px;
     box-shadow: 0 4px 8px white;
     overflow: hidden;
 }
 
 .card .text-box {
     padding: 20px;
-    flex: 1;
 }
 
 .card .image-box {
-    /* flex: 1; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -161,21 +159,29 @@
 
 .card .image-box img {
     width: 100%;
-    max-width: 100px;
+    max-width: 600px;
 }
 
-.card-title-one {
-    text-align: left;
-    font-family: Azeret Mono;
-    font-size: 18px;
-    font-weight: 600;
+.card-title {
+     text-align: left;
+     color: #0D1321B3;
+     font-family: Azeret Mono;
+     font-size: 14px;
+     font-weight: 700;
+     line-height: 20px;
+     letter-spacing: 0%;
+     margin-bottom: 12px;
+     width: 330px;
 }
 
 .card-description {
-    margin-top: 10px;
+    color: rgb(13, 19, 33);
     font-family: Azeret Mono;
-    font-size: 14px;
-    color: #666;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0%;
+    text-align: left;
 }
 
 .btn-secondary {
